# test-flake8-plugin

./: README.md  flake8_require_permissions.py  requirements-dev.txt  setup.cfg
.github/workflows/: python-ci.yml
flake8_require_permissions/: plugin.py
plugin/: plugin.py  serverless_parser.py  visitor.py
tests/: serverless.yml  test_plugin.py  test_serverless_parser.py
