[metadata]
name = flake8_require_permissions
version = 0.1.0
description = flake8 plugin for validating the enforcement of token permissions in HTTP lambdas
long_description = file: README.md
long_description_content_type = text/markdown
author = Yonatan Greenfeld
author_email = yonathan@jit.io
classifiers =
    Framework :: Flake8
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
py_modules = flake8_require_permissions
install_requires =
    flake8>=5
    pyyaml>=6.0.1
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    FRP=flake8_require_permissions.plugin:Plugin

[bdist_wheel]
universal = True

[flake8]
max-line-length = 120

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
